code to save Rhat

--- a/parameter_plots/mcmc.ipynb
+++ b/parameter_plots/mcmc.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,11 +123,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pystan\n",
+    "\n",
+    "modelfiles = {\n",
+    "     'm1': '../stancode/matrixmodel_estinilnorm_monodelta_respv2_normparam_trackgrowth_xval.stan',\n",
+    "}\n",
     "\n",
     "# modelfiles = {\n",
     "#     'm1': '../stancode/matrixmodel_estinilnorm_monodelta_respv2_normparam_trackgrowth_xval.stan',\n",
@@ -138,31 +142,26 @@
     "#     'm2p': '../stancode/matrixmodel_estinilnorm_monodelta-lightsig_respv2_normparam_trackgrowth_xval_PRIOR_ONLY.stan',\n",
     "# }  \n",
     "\n",
-    "modelfiles = {\n",
-    "   'm1': '../stancode/matrixmodel_estinilnorm_monodelta_respv2_normparam_trackgrowth_xval.stan',\n",
-    "   'm2': '../stancode/matrixmodel_estinilnorm_monodelta-lightsig_respv2_normparam_trackgrowth_xval.stan',\n",
-    "   'm3': '../stancode/matrixmodel_multinom_estinilnorm_monodelta_respiv6_normparam_trackgrowth_xval.stan',\n",
-    "   'm4': '../stancode/matrixmodel_multinom_estinilnorm_monodelta-lightsig_respiv6_normparam_trackgrowth_xval.stan',\n",
-    "   'm5': '../stancode/matrixmodel_multinom_estinilnorm_monodelta_respiv7_normparam_trackgrowth_xval.stan',\n",
-    "   'm6': '../stancode/matrixmodel_multinom_estinilnorm_monodelta-lightsig_respiv7_normparam_trackgrowth_xval.stan',\n",
-    "}"
+    "#modelfiles = {\n",
+    "#   'm1': '../stancode/matrixmodel_estinilnorm_monodelta_respv2_normparam_trackgrowth_xval.stan',\n",
+    "#   'm2': '../stancode/matrixmodel_estinilnorm_monodelta-lightsig_respv2_normparam_trackgrowth_xval.stan',\n",
+    "#   'm3': '../stancode/matrixmodel_multinom_estinilnorm_monodelta_respiv6_normparam_trackgrowth_xval.stan',\n",
+    "#   'm4': '../stancode/matrixmodel_multinom_estinilnorm_monodelta-lightsig_respiv6_normparam_trackgrowth_xval.stan',\n",
+    "#   'm5': '../stancode/matrixmodel_multinom_estinilnorm_monodelta_respiv7_normparam_trackgrowth_xval.stan',\n",
+    "#   'm6': '../stancode/matrixmodel_multinom_estinilnorm_monodelta-lightsig_respiv7_normparam_trackgrowth_xval.stan',\n",
+    "#}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m1 NOW.\n",
-      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m2 NOW.\n",
-      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m3 NOW.\n",
-      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m4 NOW.\n",
-      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m5 NOW.\n",
-      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m6 NOW.\n"
+      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m1 NOW.\n"
      ]
     }
    ],
@@ -192,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {
     "scrolled": false
    },
@@ -201,29 +200,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:pystan:Maximum (flat) parameter count (1000) exceeded: skipping diagnostic tests for n_eff and Rhat.\n",
-      "To run all diagnostics call pystan.check_hmc_diagnostics(fit)\n",
-      "WARNING:pystan:Maximum (flat) parameter count (1000) exceeded: skipping diagnostic tests for n_eff and Rhat.\n",
-      "To run all diagnostics call pystan.check_hmc_diagnostics(fit)\n",
-      "WARNING:pystan:Maximum (flat) parameter count (1000) exceeded: skipping diagnostic tests for n_eff and Rhat.\n",
-      "To run all diagnostics call pystan.check_hmc_diagnostics(fit)\n",
-      "WARNING:pystan:2000 of 4000 iterations ended with a divergence (50 %).\n",
-      "WARNING:pystan:Try running with adapt_delta larger than 0.8 to remove the divergences.\n",
-      "WARNING:pystan:Chain 3: E-BFMI = 0.000984\n",
-      "WARNING:pystan:Chain 4: E-BFMI = 0.00285\n",
-      "WARNING:pystan:E-BFMI below 0.2 indicates you may need to reparameterize your model\n",
-      "WARNING:pystan:Maximum (flat) parameter count (1000) exceeded: skipping diagnostic tests for n_eff and Rhat.\n",
-      "To run all diagnostics call pystan.check_hmc_diagnostics(fit)\n",
-      "WARNING:pystan:Maximum (flat) parameter count (1000) exceeded: skipping diagnostic tests for n_eff and Rhat.\n",
-      "To run all diagnostics call pystan.check_hmc_diagnostics(fit)\n",
-      "WARNING:pystan:2864 of 4000 iterations ended with a divergence (71.6 %).\n",
-      "WARNING:pystan:Try running with adapt_delta larger than 0.8 to remove the divergences.\n",
-      "WARNING:pystan:119 of 4000 iterations saturated the maximum tree depth of 10 (2.98 %)\n",
-      "WARNING:pystan:Run again with max_treedepth larger than 10 to avoid saturation\n",
-      "WARNING:pystan:Chain 1: E-BFMI = 0.000443\n",
-      "WARNING:pystan:Chain 2: E-BFMI = 0.0161\n",
-      "WARNING:pystan:Chain 4: E-BFMI = 0.000295\n",
-      "WARNING:pystan:E-BFMI below 0.2 indicates you may need to reparameterize your model\n",
       "WARNING:pystan:Maximum (flat) parameter count (1000) exceeded: skipping diagnostic tests for n_eff and Rhat.\n",
       "To run all diagnostics call pystan.check_hmc_diagnostics(fit)\n"
      ]
@@ -237,7 +213,10 @@
     "    for k in data:\n",
     "            mcmcs[name][k] = models[name].sampling(data=data[k], iter=2000)\n",
     "            df = pystan.misc.to_dataframe(mcmcs[name][k])\n",
-    "            df.to_csv(\"fit_{name}_{dataset}_1hr.csv\".format(name=name,dataset=k),index=False)"
+    "            df.to_csv(\"fit_{name}_{dataset}_1hr.csv\".format(name=name,dataset=k),index=False)\n",
+    "            s  = mcmcs[name][k].summary()\n",
+    "            summary = pd.DataFrame(s['summary'], columns=s['summary_colnames'], index=s['summary_rownames'])\n",
+    "            summary.to_csv(\"fit_{name}_{dataset}_summary.csv\".format(name=name,dataset=k))"
    ]
   },
   {
@@ -291,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
