--- a/parameter_plots/mcmc.ipynb
+++ b/parameter_plots/mcmc.ipynb
@@ -27,11 +27,11 @@
     "# load data\n",
     "datafiles = {\n",
     "    #'seaflow':'../data/SeaFlow_SizeDist_regrid-25-8.nc',\n",
-    "    'zinser':'../data/Zinser_SizeDist_calibrated-26-6_1hr.nc',\n",
+    "    'zinser':'../data/Zinser_SizeDist_calibrated-26-6.nc',\n",
     "}\n",
     "itestfiles = {\n",
     "    #'seaflow':'../data/Zinser_SizeDist_calibrated-26-6-itest.csv', # same as zinser\n",
-    "    'zinser':'../data/Zinser_SizeDist_calibrated-26-6-itest_1hr.csv',         \n",
+    "    'zinser':'../data/Zinser_SizeDist_calibrated-26-6-itest0.csv',       \n",
     "}\n",
     "desc = {\n",
     "    #'seaflow':'SeaFlow dataset',\n",
@@ -123,15 +123,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pystan\n",
     "\n",
-    "modelfiles = {\n",
-    "     'm1': '../stancode/matrixmodel_estinilnorm_monodelta_respv2_normparam_trackgrowth_xval.stan',\n",
-    "}\n",
+    "# modelfiles = {\n",
+    "#    'm7':'../stancode_gallery1/matrixmodel_multinom_estinilnorm_monodelta_respiv7_normparam_trackgrowth_xval.stan',\n",
+    "# }\n",
     "\n",
     "# modelfiles = {\n",
     "#     'm1': '../stancode/matrixmodel_estinilnorm_monodelta_respv2_normparam_trackgrowth_xval.stan',\n",
@@ -142,26 +142,30 @@
     "#     'm2p': '../stancode/matrixmodel_estinilnorm_monodelta-lightsig_respv2_normparam_trackgrowth_xval_PRIOR_ONLY.stan',\n",
     "# }  \n",
     "\n",
-    "#modelfiles = {\n",
-    "#   'm1': '../stancode/matrixmodel_estinilnorm_monodelta_respv2_normparam_trackgrowth_xval.stan',\n",
-    "#   'm2': '../stancode/matrixmodel_estinilnorm_monodelta-lightsig_respv2_normparam_trackgrowth_xval.stan',\n",
-    "#   'm3': '../stancode/matrixmodel_multinom_estinilnorm_monodelta_respiv6_normparam_trackgrowth_xval.stan',\n",
-    "#   'm4': '../stancode/matrixmodel_multinom_estinilnorm_monodelta-lightsig_respiv6_normparam_trackgrowth_xval.stan',\n",
-    "#   'm5': '../stancode/matrixmodel_multinom_estinilnorm_monodelta_respiv7_normparam_trackgrowth_xval.stan',\n",
-    "#   'm6': '../stancode/matrixmodel_multinom_estinilnorm_monodelta-lightsig_respiv7_normparam_trackgrowth_xval.stan',\n",
-    "#}"
+    "modelfiles = {\n",
+    "#    'm1':'../stancode_gallery1/matrixmodel_multinom_estinilnorm_freedelta_normparam_trackgrowth_xval.stan',\n",
+    "#    'm2':'../stancode_gallery1/matrixmodel_multinom_estinilnorm_monodelta_normparam_trackgrowth_xval.stan',\n",
+    "#    'm3':'../stancode_gallery1/matrixmodel_multinom_estinilnorm_monodelta_gammaiv6_normparam_trackgrowth_xval.stan',\n",
+    "#    'm4':'../stancode_gallery1/matrixmodel_multinom_estinilnorm_monodelta_respv1_normparam_trackgrowth_xval.stan',\n",
+    "#    'm5':'../stancode_gallery1/matrixmodel_multinom_estinilnorm_monodelta_respv2_normparam_trackgrowth_xval.stan',\n",
+    "#    'm6':'../stancode_gallery1/matrixmodel_multinom_estinilnorm_monodelta_respiv6_normparam_trackgrowth_xval.stan',\n",
+    "#    'm7':'../stancode_gallery1/matrixmodel_multinom_estinilnorm_monodelta_respiv7_normparam_trackgrowth_xval.stan',\n",
+    "   'm8':'../stancode_gallery1/matrixmodel_multinom_estinilnorm_monodelta-lightsig_respiv6_normparam_trackgrowth_xval.stan',\n",
+    "   'm9':'../stancode_gallery1/matrixmodel_multinom_estinilnorm_monodelta-lightsig_respiv7_normparam_trackgrowth_xval.stan',\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m1 NOW.\n"
+      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m8 NOW.\n",
+      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m9 NOW.\n"
      ]
     }
    ],
@@ -173,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -200,8 +204,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:pystan:Maximum (flat) parameter count (1000) exceeded: skipping diagnostic tests for n_eff and Rhat.\n",
-      "To run all diagnostics call pystan.check_hmc_diagnostics(fit)\n"
+      "WARNING:pystan:10 of 4000 iterations ended with a divergence (0.25 %).\n",
+      "WARNING:pystan:Try running with adapt_delta larger than 0.8 to remove the divergences.\n"
      ]
     }
    ],
@@ -213,10 +217,10 @@
     "    for k in data:\n",
     "            mcmcs[name][k] = models[name].sampling(data=data[k], iter=2000)\n",
     "            df = pystan.misc.to_dataframe(mcmcs[name][k])\n",
-    "            df.to_csv(\"fit_{name}_{dataset}_1hr.csv\".format(name=name,dataset=k),index=False)\n",
-    "            s  = mcmcs[name][k].summary()\n",
-    "            summary = pd.DataFrame(s['summary'], columns=s['summary_colnames'], index=s['summary_rownames'])\n",
-    "            summary.to_csv(\"fit_{name}_{dataset}_summary.csv\".format(name=name,dataset=k))"
+    "            df.to_csv(\"fit_{name}_{dataset}.csv\".format(name=name,dataset=k),index=False)\n",
+    "#             s  = mcmcs[name][k].summary()\n",
+    "#             summary = pd.DataFrame(s['summary'], columns=s['summary_colnames'], index=s['summary_rownames'])\n",
+    "#             summary.to_csv(\"fit_{name}_{dataset}_summary.csv\".format(name=name,dataset=k))"
    ]
   },
   {
@@ -270,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
