--- a/experimental/exp_zs_paulstemplate.ipynb
+++ b/experimental/exp_zs_paulstemplate.ipynb
@@ -430,6 +430,13 @@
     "mpl.rcParams['xtick.labelsize'] = 16\n",
     "mpl.rcParams['ytick.labelsize'] = 16\n",
     "\n",
+    "# set the color for each model\n",
+    "num_model = len(mcmcs)\n",
+    "if num_model <= 10:\n",
+    "    colors_model = {name:'C{}'.format(imodel) for imodel,name in enumerate(mcmcs)}\n",
+    "else:\n",
+    "    colors_model = {name:mpl.cm.viridis(imodel/(num_model-1)) for imodel,name in enumerate(mcmcs)}\n",
+    "    \n",
     "maxrhats_final = {name:{dataname:get_max_rhat(mcmcs[name][dataname]) for dataname in data} for name in mcmcs}"
    ]
   },
@@ -511,7 +518,7 @@
     "            height[2] = np.mean(e[data[dataname]['i_test'] == 1])\n",
     "        \n",
     "        x = (num_bars+1)*i+np.arange(num_bars)\n",
-    "        ax.bar(x=x, height=height)\n",
+    "        ax.bar(x=x, height=height, color=colors_model[name])\n",
     "        for xx,text in zip(x,['overall mean','training mean','test mean']):\n",
     "            ax.text(xx, 0, '  '+text, rotation=90, ha='center', va='bottom', size=20)\n",
     "        if maxrhats_final[name][dataname] > 1.1:\n",
@@ -714,7 +721,84 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for dataname in data:\n",
+    "    if 'zinser' in dataname:\n",
+    "        fig, ax = plt.subplots(figsize=(14,14))\n",
+    "\n",
+    "        for name in mcmcs:\n",
+    "            # misfit to data\n",
+    "\n",
+    "            obs = data[dataname]['obs']\n",
+    "\n",
+    "            tmp = mcmcs[name][dataname]['mod_obspos']\n",
+    "            tmp/= np.sum(tmp, axis=1)[:,None,:]\n",
+    "            tmp -= obs[None,:,:]\n",
+    "            tmp **= 2\n",
+    "            \n",
+    "            if np.all(data[dataname]['i_test'] == 0):\n",
+    "                e0 = np.mean(np.sum(tmp, axis=1), axis=1)\n",
+    "                xlabel_suffix = ''\n",
+    "            else:\n",
+    "                e0 = np.mean(np.sum(tmp[:,:,data[dataname]['i_test'] == 1], axis=1), axis=1)\n",
+    "                xlabel_suffix = ' (test data)'\n",
+    "            \n",
+    "            # misfit to division rate\n",
+    "\n",
+    "            e1 = np.sqrt(np.mean((mcmcs[name][dataname]['divrate'] - reference_values[dataname]['divrate'])**2))\n",
+    "        \n",
+    "            q0 = np.percentile(e0, q=(5,25,50,75,95))\n",
+    "            q1 = np.percentile(e1, q=(5,25,50,75,95))\n",
+    "\n",
+    "            eb = ax.errorbar(x=q0[2], y=q1[2], xerr=np.array((q0[2]-q0[0], q0[-1]-q0[2]))[:,None], marker='o', ms=10, label=model, color=colors_model[name])\n",
+    "            ax.errorbar(x=q0[2], y=q1[2], yerr=np.array((q1[2]-q1[0], q1[-1]-q1[2]))[:,None], color=eb[0].get_color())\n",
+    "\n",
+    "        ax.grid(True)\n",
+    "        ax.legend()\n",
+    "        ax.set(xlabel='size distribution misfit'+xlabel_suffix, ylabel='daily division rate misfit')\n",
+    "        ax.set_xlim(left=0.0)\n",
+    "        ax.set_ylim(bottom=0.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(14,14))\n",
+    "\n",
+    "datanames = tuple(data.keys())\n",
+    "for name in mcmcs:\n",
+    "    qq = {}\n",
+    "    # misfit to data\n",
+    "    for dataname in datanames:\n",
+    "        obs = data[dataname]['obs']\n",
+    "\n",
+    "        tmp = mcmcs[name][dataname]['mod_obspos']\n",
+    "        tmp/= np.sum(tmp, axis=1)[:,None,:]\n",
+    "        tmp -= obs[None,:,:]\n",
+    "        tmp **= 2\n",
+    "\n",
+    "        if np.all(data[dataname]['i_test'] == 0):\n",
+    "            e0 = np.mean(np.sum(tmp, axis=1), axis=1)\n",
+    "        else:\n",
+    "            e0 = np.mean(np.sum(tmp[:,:,data[dataname]['i_test'] == 1], axis=1), axis=1)\n",
+    "\n",
+    "        qq[dataname] = np.percentile(e0, q=(5,25,50,75,95))\n",
+    "    \n",
+    "    q0 = qq[datanames[0]]\n",
+    "    q1 = qq[datanames[1]]\n",
+    "    eb = ax.errorbar(x=q0[2], y=q1[2], xerr=np.array((q0[2]-q0[0], q0[-1]-q0[2]))[:,None], marker='o', ms=10, label=model, color=colors_model[name])\n",
+    "    ax.errorbar(x=q0[2], y=q1[2], yerr=np.array((q1[2]-q1[0], q1[-1]-q1[2]))[:,None], color=eb[0].get_color())\n",
+    "\n",
+    "ax.grid(True)\n",
+    "ax.legend()\n",
+    "ax.set(xlabel='{} size distribution misfit'.format(desc[datanames[0]]), \n",
+    "       ylabel='{} size distribution misfit'.format(desc[datanames[0]]))\n",
+    "ax.set_xlim(left=0.0)\n",
+    "ax.set_ylim(bottom=0.0)"
+   ]
   }
  ],
  "metadata": {
