--- a/experimental/exp_zs_paulstemplate.ipynb
+++ b/experimental/exp_zs_paulstemplate.ipynb
@@ -795,7 +795,14 @@
     "            tmp -= obs[None,:,:]\n",
     "            tmp **= 2\n",
     "            \n",
-    "            nc.variables['sumsqdiff'][i,:] = np.mean(np.sum(tmp[:,:,data[dataname]['i_test'] == 1], axis=1), axis=1)\n",
+    "            if np.all(data[dataname]['i_test'] == 0):\n",
+    "                nc.variables['sumsqdiff'][i,:] = np.mean(np.sum(tmp, axis=1), axis=1)\n",
+    "                if i == 0:\n",
+    "                    nc.variables['sumsqdiff'].setncattr('data_used', 'all data')\n",
+    "            else:\n",
+    "                nc.variables['sumsqdiff'][i,:] = np.mean(np.sum(tmp[:,:,data[dataname]['i_test'] == 1], axis=1), axis=1)\n",
+    "                if i == 0:\n",
+    "                    nc.variables['sumsqdiff'].setncattr('data_used', 'testing data')\n",
     "            \n",
     "            for iv,v in enumerate(('gamma_max','rho_max','xi','xir','E_star')):\n",
     "                if i == 0:\n",
@@ -818,16 +825,16 @@
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
-   "model": "python3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
-    "model": "ipython",
+    "name": "ipython",
     "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "model": "python",
+   "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.9"
