added support for prior_only

--- a/experimental/exp_zs_20200626_g2_itest.ipynb
+++ b/experimental/exp_zs_20200626_g2_itest.ipynb
@@ -203,6 +203,9 @@
     "    # load cross-validation testing indices and add them to data\n",
     "    data[dataname]['i_test'] = np.loadtxt(itestfiles[dataname]).astype(int)\n",
     "    \n",
+    "    # switch on or off data fitting\n",
+    "    data[dataname]['prior_only'] = 0\n",
+    "    \n",
     "    # add light data\n",
     "    t = np.arange(data[dataname]['nt'])*data[dataname]['dt']\n",
     "    data[dataname]['E'] = np.interp(t, xp=data_gridded[dataname]['time'], fp=par)\n",
