--- a/experimental/exp_zs_paulstemplate.ipynb
+++ b/experimental/exp_zs_paulstemplate.ipynb
@@ -201,6 +201,11 @@
     "    \n",
     "    # set all indices to zero\n",
     "    data[dataname]['i_test'] = np.zeros(data[dataname]['nt_obs'], dtype=int)\n",
+    "    # load cross-validation testing indices and add them to data\n",
+    "    #data[dataname]['i_test'] = np.loadtxt(itestfiles[dataname]).astype(int)\n",
+    "    \n",
+    "    # switch on or off data fitting\n",
+    "    data[dataname]['prior_only'] = 0\n",
     "    \n",
     "    # add light data\n",
     "    t = np.arange(data[dataname]['nt'])*data[dataname]['dt']\n",
