fix in template

--- a/experimental/exp_zs_paulstemplate.ipynb
+++ b/experimental/exp_zs_paulstemplate.ipynb
@@ -384,6 +384,7 @@
     "    maxrhats = {}\n",
     "\n",
     "try_again = False\n",
+    "refit_all = False\n",
     "\n",
     "# run a bunch of experiments -- this may take a while\n",
     "for model in models:\n",
