changes to template

--- a/experimental/exp_zs_paulstemplate.ipynb
+++ b/experimental/exp_zs_paulstemplate.ipynb
@@ -276,18 +276,20 @@
     "import re\n",
     "\n",
     "desc_model = {\n",
-    "    #'s1':'m1',\n",
-    "    #'s2':'m2',\n",
-    "    #'s3':'m3',\n",
-    "    #'s4':'m4',\n",
-    "    's5':'m5',\n",
-    "    's6':'m6',\n",
-    "    's7':'m7',\n",
-    "    #'s8':'m8',\n",
-    "    #'s9':'m9',\n",
-    "    #'s10':'m10',\n",
-    "    's11':'m5 + size-dep growth (m5-m6 hybrid)',\n",
-    "    's12':'m5 + size-dep growth (m5-m7 hybrid)',\n",
+    "    #'m1':'m1',\n",
+    "    #'m2':'m2',\n",
+    "    #'m3':'m3',\n",
+    "    'm4':'m4',\n",
+    "    'm5':'m5',\n",
+    "    'm6':'m6',\n",
+    "    'm7':'m7',\n",
+    "    'm8':'m8',\n",
+    "    'm9':'m9',\n",
+    "    'm10':'m10',\n",
+    "    'm11':'m5-m6 hybrid',\n",
+    "    'm12':'m5-m7 hybrid',\n",
+    "    'm13':'m5-m8 hybrid',\n",
+    "    'm14':'m5-m9 hybrid',\n",
     "}\n",
     "# preparing for some regular expression magic\n",
     "model_code_replacements = {\n",
@@ -628,6 +630,48 @@
     "ax.set_xlim(left=0.0)\n",
     "ax.set_ylim(bottom=0.0)\n",
     "None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_fig2a = pd.read_csv('data/Zinser_Figure2A.csv')\n",
+    "t_zinser = data_fig2a['exper time'] * 60\n",
+    "ab_mean_norm = 0.5*(data_fig2a['cells A'].values/data_fig2a['cells A'].values[0] + \n",
+    "                    data_fig2a['cells B'].values/data_fig2a['cells B'].values[0])\n",
+    "\n",
+    "for dataname in data:\n",
+    "    if 'zinser' in dataname:\n",
+    "        fig, ax = plt.subplots(figsize=(14,14))\n",
+    "        ax.set_title(desc[dataname], size=20)\n",
+    "        \n",
+    "        for model in mcmcs:\n",
+    "            # make sure the time is right, if not implement something fancier\n",
+    "            assert all(t_zinser.values[:-1] == data[dataname]['t_obs'])\n",
+    "            \n",
+    "            # misfit to normalized abundance\n",
+    "            \n",
+    "            e0 = np.mean(np.abs(np.sum(mcmcs[model][dataname]['mod_obspos'], axis=1)[:,1:]-ab_mean_norm[1:-1]), axis=1)\n",
+    "            \n",
+    "            # misfit to division rate\n",
+    "\n",
+    "            e1 = np.abs(mcmcs[model][dataname]['divrate'] - reference_values[dataname]['divrate'])\n",
+    "        \n",
+    "            q0 = np.percentile(e0, q=(5,25,50,75,95))\n",
+    "            q1 = np.percentile(e1, q=(5,25,50,75,95))\n",
+    "            \n",
+    "            eb = ax.errorbar(x=q0[2], y=q1[2], xerr=np.array((q0[2]-q0[0], q0[-1]-q0[2]))[:,None], marker='o', ms=10, label=desc_model[model], color=colors_model[model])\n",
+    "            ax.errorbar(x=q0[2], y=q1[2], yerr=np.array((q1[2]-q1[0], q1[-1]-q1[2]))[:,None], color=eb[0].get_color())\n",
+    "            if maxrhats_final[model][dataname] > 1.1:\n",
+    "                ax.plot(q0[2], q1[2], marker='x', color='darkred', zorder=10, markersize=30, markeredgewidth=3)\n",
+    "        ax.grid(True)\n",
+    "        ax.legend()\n",
+    "        ax.set(xlabel='normalized abundance misfit (hourly division rate)', ylabel='daily division rate misfit')\n",
+    "        ax.set_xlim(left=0.0)\n",
+    "        ax.set_ylim(bottom=0.0)"
    ]
   },
   {
