untested changes to template

--- a/experimental/exp_zs_paulstemplate.ipynb
+++ b/experimental/exp_zs_paulstemplate.ipynb
@@ -203,6 +203,8 @@
     "    data[dataname]['i_test'] = np.zeros(data[dataname]['nt_obs'], dtype=int)\n",
     "    # load cross-validation testing indices and add them to data\n",
     "    #data[dataname]['i_test'] = np.loadtxt(itestfiles[dataname]).astype(int)\n",
+    "    ## remove last index, so that dimensions agree\n",
+    "    #data[dataname]['i_test'] = data[dataname]['i_test'][:-1]\n",
     "    \n",
     "    # switch on or off data fitting\n",
     "    data[dataname]['prior_only'] = 0\n",
@@ -377,6 +379,8 @@
    },
    "outputs": [],
    "source": [
+    "import time\n",
+    "\n",
     "def get_max_rhat(fit):\n",
     "    s = fit.summary()\n",
     "    irhat = s['summary_colnames'].index(\"Rhat\")\n",
@@ -384,6 +388,8 @@
     "\n",
     "if 'maxrhats' not in globals():\n",
     "    maxrhats = {}\n",
+    "if 'sampling_time' not in globals():\n",
+    "    sampling_time = {}\n",
     "\n",
     "try_again = False\n",
     "refit_all = False\n",
@@ -392,9 +398,13 @@
     "for model in models:\n",
     "    if model not in maxrhats:\n",
     "        maxrhats[model] = {}\n",
+    "    if model not in sampling_time:\n",
+    "        sampling_time[model] = {}\n",
     "    for dataname in data:\n",
     "        if dataname not in maxrhats[model]:\n",
     "            maxrhats[model][dataname] = []\n",
+    "        if dataname not in sampling_time[model]:\n",
+    "            sampling_time[model][dataname] = []\n",
     "        if model in mcmcs:\n",
     "            if dataname in mcmcs[model] and not refit_all and not refit_required[model]:\n",
     "                print('{} ({})'.format(model, desc_model[model])) \n",
@@ -407,7 +417,9 @@
     "        else:\n",
     "            mcmcs[model] = {}\n",
     "        for itry in range(3):\n",
+    "            t0 = time.time()\n",
     "            mcmcs[model][dataname] = models[model].sampling(data=data[dataname], iter=2000)\n",
+    "            sampling_time[model][dataname].append(time.time() - t0) # in seconds\n",
     "            # get max Rhat\n",
     "            rhat_max = get_max_rhat(mcmcs[model][dataname])\n",
     "            maxrhats[model][dataname].append(rhat_max)\n",
@@ -485,6 +497,13 @@
     "        x = i\n",
     "        ax.bar(x=x, height=height_bad, color='tab:red', label='max $\\\\\\\\hat{R}$ > 1.1')\n",
     "        ax.bar(x=x, height=height_good, bottom=height_bad, color='tab:green', label='max $\\\\hat{R} \\le$ 1.1')\n",
+    "        \n",
+    "        if len(sampling_time[model][dataname]) != height_bad+height_good:\n",
+    "            print('{}, {}: Timing information inconsistent.'.format(dataname, desc_model[model]))\n",
+    "        else:\n",
+    "            for it, t in enumerate(sampling_time[model][dataname]):\n",
+    "                ax.text(x, it+0.5, '{:.0f}:{:02.0f}'.format(t//60, t%60), ha='center', va='center')\n",
+    "            \n",
     "        xticks.append(x)\n",
     "        xticklabels.append(desc_model[model].replace(',',',\\n'))\n",
     "    \n",
