--- a/experimental/exp_zs_paulstemplate.ipynb
+++ b/experimental/exp_zs_paulstemplate.ipynb
@@ -32,7 +32,7 @@
     "import dateutil.parser\n",
     "\n",
     "# create plots of the data\n",
-    "show_data = True\n",
+    "show_data = False\n",
     "\n",
     "# load data\n",
     "datafiles = {\n",
@@ -295,32 +295,36 @@
     "}\n",
     "# preparing for some regular expression magic\n",
     "model_code_replacements = {\n",
-    "    's1':(),\n",
-    "    's2':(),\n",
-    "    's3':(),\n",
-    "    's4':(),\n",
-    "    's5':(),\n",
-    "    's6':(),\n",
-    "    's7':(),\n",
-    "    's8':(),\n",
-    "    's9':(),\n",
-    "    's10':(),\n",
-    "    's11':(),\n",
-    "    's12':(),\n",
+    "    'm1':(),\n",
+    "    'm2':(),\n",
+    "    'm3':(),\n",
+    "    'm4':(),\n",
+    "    'm5':(),\n",
+    "    'm6':(),\n",
+    "    'm7':(),\n",
+    "    'm8':(),\n",
+    "    'm9':(),\n",
+    "    'm10':(),\n",
+    "    'm11':(),\n",
+    "    'm12':(),\n",
+    "    'm13':(),\n",
+    "    'm14':(),\n",
     "}\n",
     "model_stan_key = {\n",
-    "    's1':'c1',\n",
-    "    's2':'c2',\n",
-    "    's3':'c3',\n",
-    "    's4':'c4',\n",
-    "    's5':'c5',\n",
-    "    's6':'c6',\n",
-    "    's7':'c7',\n",
-    "    's8':'c8',\n",
-    "    's9':'c9',\n",
-    "    's10':'c10',\n",
-    "    's11':'c56',\n",
-    "    's12':'c57',\n",
+    "    'm1':'c1',\n",
+    "    'm2':'c2',\n",
+    "    'm3':'c3',\n",
+    "    'm4':'c4',\n",
+    "    'm5':'c5',\n",
+    "    'm6':'c6',\n",
+    "    'm7':'c7',\n",
+    "    'm8':'c8',\n",
+    "    'm9':'c9',\n",
+    "    'm10':'c10',\n",
+    "    'm11':'c56',\n",
+    "    'm12':'c57',\n",
+    "    'm13':'c58',\n",
+    "    'm14':'c59',\n",
     "}\n",
     "stan_files = {\n",
     "    'c1':'stancode_gallery2/matrixmodel_mlmultinom_estinilnorm2_freedelta_normparam_trackgrowth_xval2.stan',\n",
@@ -335,6 +339,8 @@
     "    'c10':'stancode_gallery2/matrixmodel_mlmultinom_estinilnorm2_monodelta2-lightsig_respv2_normparam_trackgrowth_xval2.stan',\n",
     "    'c56':'stancode/matrixmodel_mlmultinom_estinilnorm2_monodelta2_resp_gammaiv6_normparam_trackgrowth_xval2.stan',\n",
     "    'c57':'stancode/matrixmodel_mlmultinom_estinilnorm2_monodelta2_resp_gammaiv7_normparam_trackgrowth_xval2.stan',\n",
+    "    'c58':'stancode/matrixmodel_mlmultinom_estinilnorm2_monodelta2-lightsig_resp_gammaiv6_normparam_trackgrowth_xval2.stan',\n",
+    "    'c59':'stancode/matrixmodel_mlmultinom_estinilnorm2_monodelta2-lightsig_resp_gammaiv7_normparam_trackgrowth_xval2.stan',\n",
     "}\n",
     "\n",
     "refit_required = {}\n",
@@ -502,7 +508,7 @@
     "            print('{}, {}: Timing information inconsistent.'.format(dataname, desc_model[model]))\n",
     "        else:\n",
     "            for it, t in enumerate(sampling_time[model][dataname]):\n",
-    "                ax.text(x, it+0.5, '{:.0f}:{:02.0f}'.format(t//60, t%60), ha='center', va='center')\n",
+    "                ax.text(x, it+0.5, '{:.0f}:{:02.0f}'.format(t//60, t%60), ha='center', va='center', size=30)\n",
     "            \n",
     "        xticks.append(x)\n",
     "        xticklabels.append(desc_model[model].replace(',',',\\n'))\n",
@@ -567,6 +573,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "add_labels = True\n",
     "for dataname in data:\n",
     "    if 'zinser' in dataname:\n",
     "        fig, ax = plt.subplots(figsize=(14,14))\n",
@@ -598,6 +605,10 @@
     "            \n",
     "            eb = ax.errorbar(x=q0[2], y=q1[2], xerr=np.array((q0[2]-q0[0], q0[-1]-q0[2]))[:,None], marker='o', ms=10, label=desc_model[model], color=colors_model[model])\n",
     "            ax.errorbar(x=q0[2], y=q1[2], yerr=np.array((q1[2]-q1[0], q1[-1]-q1[2]))[:,None], color=eb[0].get_color())\n",
+    "            \n",
+    "            if add_labels:\n",
+    "                ax.text(q0[2], q1[2], ' '+desc_model[model], color=eb[0].get_color(), size=20)\n",
+    "            \n",
     "            if maxrhats_final[model][dataname] > 1.1:\n",
     "                ax.plot(q0[2], q1[2], marker='x', color='darkred', zorder=10, markersize=30, markeredgewidth=3)\n",
     "        ax.grid(True)\n",
@@ -613,41 +624,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(figsize=(14,14))\n",
-    "\n",
     "datanames = tuple(data.keys())\n",
-    "for model in mcmcs:\n",
-    "    qq = {}\n",
-    "    # misfit to data\n",
-    "    for dataname in datanames:\n",
-    "        obs = data[dataname]['obs']\n",
+    "if len(datanames) > 1:\n",
+    "    fig, ax = plt.subplots(figsize=(14,14))\n",
     "\n",
-    "        tmp = mcmcs[model][dataname]['mod_obspos']\n",
-    "        tmp/= np.sum(tmp, axis=1)[:,None,:]\n",
-    "        tmp -= obs[None,:,:]\n",
-    "        tmp **= 2\n",
+    "    for model in mcmcs:\n",
+    "        qq = {}\n",
+    "        # misfit to data\n",
+    "        for dataname in datanames:\n",
+    "            obs = data[dataname]['obs']\n",
     "\n",
-    "        if np.all(data[dataname]['i_test'] == 0):\n",
-    "            e0 = np.mean(np.sum(tmp, axis=1), axis=1)\n",
-    "        else:\n",
-    "            e0 = np.mean(np.sum(tmp[:,:,data[dataname]['i_test'] == 1], axis=1), axis=1)\n",
+    "            tmp = mcmcs[model][dataname]['mod_obspos']\n",
+    "            tmp/= np.sum(tmp, axis=1)[:,None,:]\n",
+    "            tmp -= obs[None,:,:]\n",
+    "            tmp **= 2\n",
     "\n",
-    "        qq[dataname] = np.percentile(e0, q=(5,25,50,75,95))\n",
-    "    \n",
-    "    q0 = qq[datanames[0]]\n",
-    "    q1 = qq[datanames[1]]\n",
-    "    \n",
-    "    eb = ax.errorbar(x=q0[2], y=q1[2], xerr=np.array((q0[2]-q0[0], q0[-1]-q0[2]))[:,None], marker='o', ms=10, label=desc_model[model], color=colors_model[model])\n",
-    "    ax.errorbar(x=q0[2], y=q1[2], yerr=np.array((q1[2]-q1[0], q1[-1]-q1[2]))[:,None], color=eb[0].get_color())\n",
-    "    if maxrhats_final[model][dataname] > 1.1:\n",
-    "        ax.plot(q0[2], q1[2], marker='x', color='darkred', zorder=10, markersize=30, markeredgewidth=3)\n",
-    "    \n",
-    "ax.grid(True)\n",
-    "ax.legend()\n",
-    "ax.set(xlabel='{} size distribution misfit'.format(desc[datanames[0]]), \n",
-    "       ylabel='{} size distribution misfit'.format(desc[datanames[1]]))\n",
-    "ax.set_xlim(left=0.0)\n",
-    "ax.set_ylim(bottom=0.0)\n",
+    "            if np.all(data[dataname]['i_test'] == 0):\n",
+    "                e0 = np.mean(np.sum(tmp, axis=1), axis=1)\n",
+    "            else:\n",
+    "                e0 = np.mean(np.sum(tmp[:,:,data[dataname]['i_test'] == 1], axis=1), axis=1)\n",
+    "\n",
+    "            qq[dataname] = np.percentile(e0, q=(5,25,50,75,95))\n",
+    "\n",
+    "        q0 = qq[datanames[0]]\n",
+    "        q1 = qq[datanames[1]]\n",
+    "\n",
+    "        eb = ax.errorbar(x=q0[2], y=q1[2], xerr=np.array((q0[2]-q0[0], q0[-1]-q0[2]))[:,None], marker='o', ms=10, label=desc_model[model], color=colors_model[model])\n",
+    "        ax.errorbar(x=q0[2], y=q1[2], yerr=np.array((q1[2]-q1[0], q1[-1]-q1[2]))[:,None], color=eb[0].get_color())\n",
+    "        if maxrhats_final[model][dataname] > 1.1:\n",
+    "            ax.plot(q0[2], q1[2], marker='x', color='darkred', zorder=10, markersize=30, markeredgewidth=3)\n",
+    "\n",
+    "    ax.grid(True)\n",
+    "    ax.legend()\n",
+    "    ax.set(xlabel='{} size distribution misfit'.format(desc[datanames[0]]), \n",
+    "           ylabel='{} size distribution misfit'.format(desc[datanames[1]]))\n",
+    "    ax.set_xlim(left=0.0)\n",
+    "    ax.set_ylim(bottom=0.0)\n",
     "None"
    ]
   },
@@ -662,6 +674,7 @@
     "ab_mean_norm = 0.5*(data_fig2a['cells A'].values/data_fig2a['cells A'].values[0] + \n",
     "                    data_fig2a['cells B'].values/data_fig2a['cells B'].values[0])\n",
     "\n",
+    "add_labels = True\n",
     "for dataname in data:\n",
     "    if 'zinser' in dataname:\n",
     "        fig, ax = plt.subplots(figsize=(14,14))\n",
@@ -684,6 +697,8 @@
     "            \n",
     "            eb = ax.errorbar(x=q0[2], y=q1[2], xerr=np.array((q0[2]-q0[0], q0[-1]-q0[2]))[:,None], marker='o', ms=10, label=desc_model[model], color=colors_model[model])\n",
     "            ax.errorbar(x=q0[2], y=q1[2], yerr=np.array((q1[2]-q1[0], q1[-1]-q1[2]))[:,None], color=eb[0].get_color())\n",
+    "            if add_labels:\n",
+    "                ax.text(q0[2], q1[2], ' '+desc_model[model], color=eb[0].get_color(), size=20)\n",
     "            if maxrhats_final[model][dataname] > 1.1:\n",
     "                ax.plot(q0[2], q1[2], marker='x', color='darkred', zorder=10, markersize=30, markeredgewidth=3)\n",
     "        ax.grid(True)\n",
